[package]
name = "n3n-mgmt-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(unix)'.dependencies]
hyper-unix-connector = "0.2.2"

[profile.release]
lto = true
opt-level = 'z'

